cabal-version:       >=1.10

name:                super-fiesta
version:             0.1.0.0
synopsis:
  Executable for dependency confusion investigation
description:

  Dependency confusion is a software supply chain attack described
  at <https://medium.com/@alex.birsan/dependency-confusion-4a5d60fec610>.
  This package is the attack target in my dependency confusion
  investigation for the Haskell ecosystem.

-- bug-reports:
license:             PublicDomain
license-file:        LICENSE
author:              Fraser Tweedale
maintainer:          frase@frase.id.au
-- copyright:
category:            ACME
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable super-fiesta
  main-is: Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4 && <5
    , redesigned-carnival
  default-language:    Haskell2010
